src/test/ui/extoption_env-not-string-literal.stderr
error: argument must be a string literal
  --> $DIR/extoption_env-not-string-literal.rs:1:25
   |
LL | fn main() { option_env!(10); } //~ ERROR: argument must be a string literal
   |                         ^^

error: aborting due to previous error

